--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
     "history": "^4.7.2",
+    "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.22.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
