--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "materialize-css": "^1.0.0-rc.1",
     "moment": "^2.22.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.13.1",
     "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.4.1",
     "recharts": "^1.0.0-beta.10",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
